# ChangeLog for dev-python/setuptools
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/setuptools/ChangeLog,v 1.138 2011/06/24 19:14:42 hwoarang Exp $

  24 Jun 2011; Markos Chandras <hwoarang@gentoo.org> setuptools-0.6.19.ebuild:
  Add ~m68k keyword

*setuptools-0.6.19 (24 Jun 2011)

  24 Jun 2011; Markos Chandras <hwoarang@gentoo.org> +setuptools-0.6.19.ebuild:
  Backport version bump from python overlay. Requested by Arfrever

  24 Jun 2011; Raúl Porcel <armin76@gentoo.org> setuptools-0.6.15.ebuild,
  setuptools-0.6.16.ebuild:
  m68k stable

  28 May 2011; Brent Baude <ranger@gentoo.org> setuptools-0.6.15.ebuild:
  Marking setuptools-0.6.15 ppc for bug 364413

  21 May 2011; Raúl Porcel <armin76@gentoo.org> setuptools-0.6.15.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #364413

  15 May 2011; Markus Meier <maekke@gentoo.org> setuptools-0.6.15.ebuild:
  arm stable, bug #364413

  15 May 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  setuptools-0.6.15.ebuild:
  x86 stable wrt bug #364413

*setuptools-0.6.16 (01 May 2011)

  01 May 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +setuptools-0.6.16.ebuild,
  +files/distribute-0.6.16-fix_deprecation_warnings.patch:
  Version bump.

  29 Apr 2011; Samuli Suominen <ssuominen@gentoo.org> setuptools-0.6.15.ebuild:
  ppc64 stable wrt #364413

  26 Apr 2011; Jeroen Roovers <jer@gentoo.org> setuptools-0.6.15.ebuild:
  Stable for HPPA (bug #364413).

  25 Apr 2011; Markos Chandras <hwoarang@gentoo.org> setuptools-0.6.15.ebuild:
  Stable on amd64 wrt bug #364413

  15 Apr 2011; Fabian Groffen <grobian@gentoo.org> setuptools-0.6.15.ebuild:
  Marked ~m68k-mint, bug #363737

*setuptools-0.6.15 (23 Mar 2011)

  23 Mar 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +setuptools-0.6.15.ebuild:
  Version bump.

  27 Dec 2010; Brent Baude <ranger@gentoo.org> setuptools-0.6.14.ebuild: