@@ -1,18 +1,24 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA512
 
 DIST iso8601-0.1.4.tar.gz 4685 RMD160 5783da9bf409c23afd90c286465948af9c12dc1b SHA1 91af50a59c7af07b59ec7dbd2dd3e4f6cd2a8c0d SHA256 7a28ccdfb316960431aa7f589f71cb10e0675917e36f6d718d9c03ec6e97f60d
-EBUILD iso8601-0.1.4.ebuild 599 RMD160 7ec2905e1c24db887b56c6622ef8cde10885d82f SHA1 8b592329b050366c9363bed5c45695eacb90442a SHA256 cb4b97ecd223dfac08a335a047bca51adf7242e58c4dcfb3da1efced9ba629e0
-MISC ChangeLog 413 RMD160 daf82a62081c41802b0e05579d528350a8885809 SHA1 888c5b2006e4ad487679d096ea9483ec841d992d SHA256 2907fb366f45f45be18fd20d0218c616fe6c0fe114e9845d57fc92bc73b84350
+EBUILD iso8601-0.1.4.ebuild 638 RMD160 67bc924d539ca921eb199a2f16273da19dd039e1 SHA1 f91040a74c92f48d5b7d982e44492a5fad0bc101 SHA256 e32ee006d79d9b08daf7690bd4db57bec92a57d46226e87fec2f6ab1da5bc225
+MISC ChangeLog 523 RMD160 888761f0404492915d19a996aa37cf1815381f96 SHA1 4b3f03f78e45773bb6546d669fee6c7d831b72af SHA256 99fb6ca10eaaa5fdb234056a1a89bb40e8515f5181489a12e734e2a6cf1ff507
 MISC metadata.xml 162 RMD160 b892a3896f801a0c8420baf49296050d1132bea3 SHA1 e42acb023fe4bd0fac8f1bafa9b984ddf96fbc5e SHA256 16ffd53ada09d3888873e96fbb35cf8e7de89caa3a7132de7fe286fcbe42f8e5
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQEcBAEBAgAGBQJOM1tqAAoJEMmH5mwCk1Nv930IAMEqSlmSzt3zFwcGvx7eaiSI
-cvKT47A+dWEMiUdxW16MngydRYHaKxzXQDXzH6p/w+FsmbZiSw/WsdY6YwlSnDPR
-LXIj7BkwGRAhz4m568OTGrcjVWE+dY64ihUkHJVi/RcxRyKiTG53/bRcWmTNZG0r
-8ErWg/xNB3Fy5IK/MMGO8Dj65lZoDJ8MazpTRyuy36imMZjuVgkufrDucQJ/px1P
-fteJsHf+PXH6s/pjB3LTmBw7SkQoKnNeJZSQgA9SamP1A2WBouWig/GtOKqVBjZ7
-IceMglJDNg3KYwK84LViUpnNLMUyXkjq/V/CxL+LxRTRNiP+zftCzUbtJQIr47Q=
-=HeQN
+iQIcBAEBCgAGBQJOTrtWAAoJEPqDWhW0r/LCN4IQAMHWw/c6CVoZKlW1w4TzBisj
+S1Udi0lR8TOTVy2h8xle6rGZ1HxpC/BIFDaWpOnSf1aJR87FLnS0bFWVHFknATfQ
+2g00/oM5T3i3fzYAyPRNODcwsz8D5a8adlADYR/wyqxG2LAKUP1BYzs/eQpNUmay
+6EzeuT0YIlUs/k8B3Eqqr/r9wt8ZV7KC97NArDoth7v1IuVnZwS8UrzkoA/KKhqW
+U+re4iEM3T6t921FQF9xJFhAaW9m+VTTiLlki9imyjtq65AeuvVloTLHXolq9CHV
+/6FW1bQPZR4SxAwIgzaA5/gRxs03jZJS4po9axDN1sFJiav5Tz2Kidtq3kEN/0r+
+8yoJ7CdyGuT8QQ/dtLnQ/kin0Q7N+ix85iVC8rvasarBVo73Bavaolr07hLmNODn
+pSjW2YuqmW+96pjJrZGCW1LJgy3BBtZPVRNSS47QWmSYvW6QQp/HZ64lH+R531LS
+0laIUkM2gRPvCTMgq3Gy9fyvJUIoVOILYbg5AePa0BDDpIUP5bjzsNiBmn43zHmc
+LGmzgsi9td5qh+U3HQxXYFs4efgP9Nn2EAqJxnOLeWPwRwqfU8GobbhSzq+DA+O9
+RYvursQ9YbtbJjhV1IprkZDbji0+1wfMQ8dnWoDefdhiuPqrtz8WOSIThR1bG3AA
+mVWVO9Az4IwxaYGvGvR8
+=Zbgs
 -----END PGP SIGNATURE-----
