@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/setuptools
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/setuptools/ChangeLog,v 1.138 2011/06/24 19:14:42 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/setuptools/ChangeLog,v 1.139 2011/08/19 19:35:38 hwoarang Exp $
+
+  19 Aug 2011; Markos Chandras <hwoarang@gentoo.org> setuptools-0.6.15.ebuild,
+  setuptools-0.6.16.ebuild:
+  Block new versions of Python. Patch by Arfrever.
 
   24 Jun 2011; Markos Chandras <hwoarang@gentoo.org> setuptools-0.6.19.ebuild:
   Add ~m68k keyword
